[gd_scene load_steps=3 format=3 uid="uid://c4nwcd8674cnx"]

[ext_resource type="Script" path="res://Assets/Scripts/Main/areaSwitch.gd" id="1_fhjko"]
[ext_resource type="Theme" uid="uid://bilsq7fjihupe" path="res://Assets/Themes/placeHolderTheme/placeholderTheme.tres" id="2_caflv"]

[node name="areaSwitch" type="Control" node_paths=PackedStringArray("buttons")]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -500.0
offset_right = 500.0
grow_vertical = 0
script = ExtResource("1_fhjko")
buttons = [NodePath("button1"), NodePath("button2"), NodePath("button3"), NodePath("outsideButton")]

[node name="outsideButton" type="Button" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -1080.0
offset_right = 1920.0
grow_vertical = 0
disabled = true

[node name="colorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.690196, 1, 0.803922, 0.0431373)

[node name="openMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_right = 75.0
grow_vertical = 0
text = "Rooms!"

[node name="button1" type="Button" parent="."]
visible = false
layout_mode = 1
offset_right = 100.0
offset_bottom = 100.0
theme = ExtResource("2_caflv")
disabled = true
text = "FRONT
COUNTER"

[node name="button2" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0
theme = ExtResource("2_caflv")
disabled = true
text = "DRINK
STATION"

[node name="button3" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_caflv")
disabled = true
text = "OFFICE"

[connection signal="pressed" from="outsideButton" to="." method="_on_outside_button_pressed"]
[connection signal="button_down" from="openMenu" to="." method="_on_open_menu_button_down"]
[connection signal="button_up" from="openMenu" to="." method="_on_open_menu_button_up"]
[connection signal="pressed" from="openMenu" to="." method="_on_open_menu_pressed"]
[connection signal="mouse_entered" from="button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="mouse_exited" from="button1" to="." method="_on_button_1_mouse_exited"]
[connection signal="pressed" from="button1" to="." method="_on_button_1_pressed"]
[connection signal="mouse_entered" from="button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="pressed" from="button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="button3" to="." method="_on_button_3_mouse_exited"]
[connection signal="pressed" from="button3" to="." method="_on_button_3_pressed"]
